test/testdata/variables/undefined_access_error_global_defined_after.lox
var a;
print a; // error: a has not been defined
a = 1;
